@@ -1,4 +1,4 @@
-﻿// Copyright (c) 2015-2020, Saritasa. All rights reserved.
+﻿// Copyright (c) 2015-2022, Saritasa. All rights reserved.
 // Licensed under the BSD license. See LICENSE file in the project root for full license information.
 
 using System;
@@ -232,6 +232,15 @@ namespace Saritasa.Tools.Common.Utils
         /// <param name="target">Target datetime.</param>
         /// <returns>Unix time stamp.</returns>
         public static double ToUnixTimestamp(DateTime target) => (target - UnixEpoch).TotalSeconds;
+
+#if NET6_0_OR_GREATER
+        /// <summary>
+        /// Converts <see cref="System.DateOnly" /> to unix time stamp.
+        /// </summary>
+        /// <param name="target">Target datetime.</param>
+        /// <returns>Unix time stamp.</returns>
+        public static double ToUnixTimestamp(DateOnly target) => (target.ToDateTime(TimeOnly.MinValue) - UnixEpoch).TotalSeconds;
+#endif
 
         #endregion
 
