@@ -1,12 +1,13 @@
 ﻿5.0.0 [TBD]
 [+] Add .NET 6.0 support.
-[-] Drop .NET 4.0 support.
+[-] Drop .NET Framework 4.0 support.
 [-] Drop ObjectUtils.CreateInstanceWithServiceProvider . Use ActivatorUtilities.CreateInstance .
 [*] DictionaryUtils.GetValueOrDefault is only available for netstandard 1.6 and 2.0 .
 [*] Fix ParseOrDefault for enums with ignore case.
 [+] Add LeftJoin collection extension.
 [+] Add ReadOnlySpan overloads for StringUtils.
 [+] Add parse or default methods for DateTimeOffset and DateOnly types.
+[+] Add DateOnly overloads in DateTimeUtils.
 
 4.1.0 [2021-11-25]
 [+] Add .NET 5.0 target.
